resources/css/files-main.css
.icon_files {
	background-image:url(../resources/icons/files_icon.png) !important;
	background-repeat: no-repeat;
	background-position: left 9px !important;
}
.icon_files_category {
	background-image:url(../resources/icons/files_icon_category.png);
	background-position: 4px center;
}
.x-btn .x-btn-large .icon_files_category{
	background-image:url(../resources/icons/files_icon_category_large.png);
}

.x-menu-item-icon.icon_files_category {
	background-position: -1px center;
}

.icon_files_category_white {
	background-image:url(../resources/icons/files_icon_category_white.png);
	background-position: 5% center !important;
}

.icon_cache {
	background-image:url(../resources/icons/icon_refresh.png) !important;
	background-repeat: no-repeat;
	background-position: center;
}
.icon_info {
	background-image:url(../resources/icons/icon_info_small.png) !important;
	background-repeat: no-repeat;
	background-position: center;
}
.icon_viewswitch {
	background-image:url(../resources/icons/icon_viewswitch.png) !important;
	background-repeat: no-repeat;
	background-position: center;
}
.icon_action_cancel {
    background-image:url(../resources/icons/actions/cancel.png) !important;
    background-repeat: no-repeat;
    background-position: center;
}
span.error_files {
	color: #CC3333 !important;
}

/** tree panel */
.x-treenode-load-silent .x-tree-node-icon {
    background-image: url(../../../client/resources/images/icons/folder.png)!important;
}

/** top toolbar */
.files_top_toolbar .x-toolbar-left table{
    width: 100%;
}

.files_top_toolbar {
	padding: 6px 0 5px 0 !important;
	height: 25px !important;
}

/** quota bar */
.files_quota_bar_snippet .img{
    width: 16px;
    height: 16px;
    background-image: url('../resources/icons/ajax-loader.gif');
    border: none!important;
}
.files_quota_bar_container {
    margin-top: 3px;
}
.files_quota_bar {
    border: 1px solid #e6e6e6;
    height: 18px !important;
}
.files_quota_bar .x-progress-inner{
    background-image: none;
    background-color: transparent;
}
.files_quota_bar .x-progress-bar{
    background-image: none;
    background: #d5e9f9;
    border-color: #e6e6e6;
    height: 18px !important;
}

/** Upload panel */
.fp_upload_canceled {
    border-color: #831505;
}
.fp_upload_canceled .x-progress-bar {
    background-image: none;
    background-color: #fd104e;
    border-color: #831505;
}
.fp_upload_header {
    font-size: 12px!important;
    font-weight: bold;
}
.files_type_hidden {
	display: none;
}

.files_image {
	height:50px;
	width:40px;
}

/** add + delete */
.filesplugin_icon_delete {
	background: url(../resources/icons/delete_icon.png) no-repeat !important;
	background-repeat: no-repeat;
	background-position: 3px center !important;
	background-size: 17px!important;
}
.filesplugin_icon_add {
	background: url(../resources/icons/add_icon.png) no-repeat !important;
	background-repeat: no-repeat;
	background-position: 4px center !important;
}

.files_backend_selector {
    width: 25px;
    display: inline-block;
}

/* Status icons for the account list */
.zarafa-files-account-ok {
	background-image: url(../resources/icons/accstat/ok.png);
}

.zarafa-files-account-new {
	background-image: url(../resources/icons/accstat/new.png);
}

.zarafa-files-account-error {
	background-image: url(../resources/icons/accstat/error.png);
}

.zarafa-files-account-unknown {
	background-image: url(../resources/icons/accstat/unknown.png);
}

/* Sharing Icons */
.files_icon_16_share {
	background-image: url(../resources/icons/share_icon_16.png)!important;
	background-repeat: no-repeat;
}
.files_icon_12_share {
	background-image: url(../resources/icons/share_icon_12.png)!important;
	background-repeat: no-repeat;
	top: 7px;
}

/* Icons for the feature list */
.zarafa-files-feature-spacer {
	margin-left: 3px;
	margin-right: 3px;
}
.zarafa-files-accfeature-quota {
	background-image: url(../resources/icons/features/quota.png);
}

.zarafa-files-accfeature-info {
	background-image: url(../resources/icons/features/info.png);
}

.zarafa-files-accfeature-sharing {
	background-image: url(../resources/icons/features/sharing.png);
}
.zarafa-files-accfeature-streaming {
    background-image: url(../resources/icons/features/streaming.png);
}


/* extjs overwrite */
/* used in fieldsets */
.x-tool.x-tool-toggle {
	background-image: url(../resources/icons/icon_toggle.png);
	background-position: center;
}

/* icon view */
.zarafa-files-iconview {
	 background-color: white;
}
.zarafa-files-iconview-container {
	float:left;
	word-wrap: break-word;
	height: 95px;
	margin:5px;
	overflow:hidden;
	padding-left:2px;
	padding-right:2px;
	padding-top:2px;
	text-align:center;
	width:70px;
	border:2px solid #fff;
	text-overflow:ellipsis;
}
.zarafa-files-iconview-thumb {
	background-position:50% 10%;
	background-repeat:no-repeat;
	height:62px;
	width:62px;
	border:2px solid #fff;
}

.zarafa-files-iconview-over {
	background-color:#EFEFFF;
	border:2px solid #DDDDDD;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	color:#0E62BB;
}
.zarafa-files-iconview-selected	{
	background-color:#CEE3F6;
	border:2px solid #7EACD6;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	color:#0E62BB;
}
.zarafa-files-iconview-subject {
	color: #000;
	text-overflow:ellipsis;
	overflow:hidden;
}

.zarafa-files-listview-icon {
	background-repeat: no-repeat;
	background-position: center;
}

/* account view */
.zarafa-files-accountview {
	background-color: white;
}

.zarafa-files-iconview-over {
	background-color:#EFEFFF;
	border:2px solid #DDDDDD;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	color:#0E62BB;
}
.zarafa-files-iconview-selected	{
	background-color:#CEE3F6;
	border:2px solid #7EACD6;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	color:#0E62BB;
}

.zarafa-files-iconview-thumb {
	background-position:50% 10%;
	background-repeat:no-repeat;
	height:62px;
	width:62px;
	border:2px solid #fff;
}
/* ... */

